index: routes, controller, view, layout, add styles

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,16 @@
-<h1>Welcome to the social</h1>
+<h1><span class="energy-bar">&nbsp;</span>Welcome to the social</h1>
+<div class="container-fluid d-flex my-10 py-10">
+    <!-- content here -->
+    <div data-role="tile" class="mx-1 bg-orange">
+        <span class="branding-bar">Branding bar</span>
+    </div>
+    <div data-role="tile" class="mx-1 bg-magenta" data-effect="animate-slide-up animate-fade" data-cover="https://i.scdn.co/image/a3c9dd492b973e5d5ebfd957b30325972c16d2d4">
+    <span class="branding-bar">Calle 13</span>
+</div>
+<div data-role="tile" class="mx-1">
+    <span class="branding-bar">Branding bar</span>
+</div>
+<div data-role="tile" class="mx-1">
+    <span class="branding-bar">Branding bar</span>
+</div>
+</div>
