--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,6 +14,7 @@ White =
 
 body{
     font-family:'Segoe UI';
+    background-color: #000;
 }
 h1{
     font-weight: lighter;
@@ -21,11 +22,39 @@ h1{
     /* color: linear-gradient(90deg, rgba(254,80,0,1) 0%, rgba(217,2,125,1) 100%); */
     color: #d9017a;
 }
-
+a{
+    text-decoration: none !important;
+}
 /* classes */
 .energy-bar{
     background: linear-gradient(0deg, rgba(254,80,0,1) 0%, rgba(217,1,122,1) 100%);
     width: 1vw;
     height: auto;
     margin-right: 1vw;
+    font-size: 30px;
+}
+.menu-wrap{
+    width: 400px
+}
+.menu{
+    text-decoration: none !important;
+
+}
+.menu :hover{
+    text-decoration: none !important;
+    background: linear-gradient(90deg, rgba(254,80,0,1) 0%, rgba(217,1,122,1) 50% , rgb(255, 255, 255, 0) 80% ) !important;
+    color: white !important; 
+}
+.slogan{
+    font-size: 35px;
+    font-weight: lighter;
+    letter-spacing:-2px;
+    /* color: linear-gradient(90deg, rgba(254,80,0,1) 0%, rgba(217,2,125,1) 100%); */
+    color: #d9017a;
+}
+.login-form {
+    width: 350px;
+    height: auto;
+    top: 50%;
+    margin-top: -160px;
 }
