--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,16 +1,16 @@
-<h1><span class="energy-bar">&nbsp;</span>Welcome to the social</h1>
-<div class="container-fluid d-flex my-10 py-10">
-    <!-- content here -->
-    <div data-role="tile" class="mx-1 bg-orange">
-        <span class="branding-bar">Branding bar</span>
+<h1 class="text-8xl mb-5 text-zorange font-thin tracking-tighter lg:text-9xl">Novedades en México</h1>
+
+<ul role="list" class="grid grid-cols-2 gap-x-4 gap-y-8 sm:grid-cols-3 sm:gap-x-6 lg:grid-cols-5 xl:gap-x-8">
+  {{#each novedades}}
+  <li class="relative">
+    <div class="group block w-full aspect-w-10 aspect-h-7 bg-gray-100 focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-offset-gray-100 focus-within:ring-zorange overflow-hidden">
+      <a href="/music/album/{{this.id}}"><img src="{{this.images.0.url}}" alt="" class="object-cover pointer-events-none group-hover:opacity-75"></a>
     </div>
-    <div data-role="tile" class="mx-1 bg-magenta" data-effect="animate-slide-up animate-fade" data-cover="https://i.scdn.co/image/a3c9dd492b973e5d5ebfd957b30325972c16d2d4">
-    <span class="branding-bar">Calle 13</span>
-</div>
-<div data-role="tile" class="mx-1">
-    <span class="branding-bar">Branding bar</span>
-</div>
-<div data-role="tile" class="mx-1">
-    <span class="branding-bar">Branding bar</span>
-</div>
-</div>
+    <p class="mt-2 block text-md font-medium text-zmagenta truncate pointer-events-none">{{this.name}}</p>
+    {{#each artists}}
+        <a href="/music/artist/{{this.id}}" class="text-sm font-ligth text-white">{{this.name}} </a>
+    {{/each}}
+  </li>
+  {{/each}}
+  <!-- More files... -->
+</ul>
