--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,15 +1,63 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zunefy</title>
-    <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4.3.2/css/metro-all.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
+    <link href="/css/output.css" rel="stylesheet" />
+  </head>
+  <body class="bg-zblack">
+    <!-- This example requires Tailwind CSS v2.0+ -->
+    <header class="bg-black">
+    <nav class="w-full mx-auto px-4 sm:px-6 lg:px-8" aria-label="Top">
+        <div class="w-full py-6 flex items-center justify-between border-b border-zorange lg:border-none">
+        <div class="flex items-center">
+            <a href="/">
+            <span class="sr-only">Workflow</span>
+            <a href="/" class="text-4xl font-thin tracking-tighter text-zorange hover:text-zmagenta"> you make it yours. </a>
+            </a>
+            <div class="hidden ml-10 space-x-8 lg:block">
+            <a href="/musica" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> musica </a>
+            <a href="/videos" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> videos </a>
+            <a href="/podcast" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> podcast </a>
+            <a href="/matic" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> gener-o-matic </a>
+            <a href="/sentence" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> the sentence </a>
+            <a href="/acerca" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> acerca </a>
+            </div>
+        </div>
+        <div class="ml-10 space-x-4">
+            <img class="inline-block h-8 w-8 rounded-full" src="https://www.tenforums.com/geek/gars/images/2/types/thumb_14400082930User.png" alt="">
+            <a href="/auth/signin" class="inline-block py-2 px-4 border border-transparent rounded-md text-base font-medium text-zgray-3 hover:text-zorange">Sign in</a>
+            <a href="/auth/signup" class="inline-block py-2 px-4 border border-transparent rounded-md text-base font-medium text-zgray-3 hover:text-zorange">Sign up</a>
+        </div>
+        </div>
+        <div class="py-4 flex flex-wrap justify-center space-x-6 lg:hidden">
+            <a href="/musica" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> musica </a>
+            <a href="/videos" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> videos </a>
+            <a href="/podcast" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> podcast </a>
+            <a href="/matic" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> gener-o-matic </a>
+            <a href="/sentence" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> the sentence </a>
+            <a href="/acerca" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> acerca </a>
+        </div>
+    </nav>
+    </header>
+
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     {{{ body }}}
-    <script src="https://cdn.metroui.org.ua/v4.3.2/js/metro.min.js"></script>
-</body>
+    </div>
+    <footer class="bg-black fixed bottom-0 w-full">
+        <div class="w-full mx-auto py-7 px-4 sm:px-6 md:flex md:items-center md:justify-between lg:px-8">
+            <div class="flex justify-center content-center space-x-6 ">
+                <img src="https://img.icons8.com/windows/50/d9017a/brain.png"/>
+                <img src="https://img.icons8.com/windows/50/66676c/wireless-cloud-access.png"/>
+                <img src="https://img.icons8.com/windows/50/66676c/ssd.png"/>
+                <a href="" class="text-2xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> dispositivo cerebral conectado </a>
+            </div>
+            <div class="mt-8 md:mt-0 ">
+            <p class="text-center text-base text-zgray-10">&copy; 2022 jackscript. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+  </body>
 </html>
