--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -1,7 +1,7 @@
 <div class="min-h-full flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
   <div class="max-w-md w-full space-y-8">
     <div>
-      <h2 class="mt-6 text-5xl font-thin tracking-tighter text-zorange">iniciar sesion</h2>
+      <h2 class="text-5xl font-thin tracking-tighter text-zorange">iniciar sesion</h2>
     </div>
     <form class="mt-8 space-y-6" action="/auth/signin" method="POST">
       <div class="rounded-md shadow-sm -space-y-px">
