--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,15 +14,13 @@
         <div class="flex items-center">
             <a href="/">
             <span class="sr-only">Workflow</span>
-            <a href="/" class="text-4xl font-thin tracking-tighter text-zorange hover:text-zmagenta"> you make it yours. </a>
+            <a href="/" class="text-4xl font-thin tracking-tighter text-zorange hover:text-zmagenta"> musiCortex </a>
             </a>
             <div class="hidden ml-10 space-x-8 lg:block">
-            <a href="/musica" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> musica </a>
-            <a href="/videos" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> videos </a>
-            <a href="/podcast" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> podcast </a>
-            <a href="/matic" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> gener-o-matic </a>
-            <a href="/sentence" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> the sentence </a>
-            <a href="/acerca" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> acerca </a>
+            <a href="/discover" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> discover </a>
+            <a href="/myqueue" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> myQueue </a>
+            <a href="/rand-o-matic" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> rand-o-matic </a>
+            {{!-- <a href="/acerca" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> acerca </a> --}}
             </div>
         </div>
         <div class="ml-10 space-x-4">
@@ -32,12 +30,9 @@
         </div>
         </div>
         <div class="py-4 flex flex-wrap justify-center space-x-6 lg:hidden">
-            <a href="/musica" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> musica </a>
-            <a href="/videos" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> videos </a>
-            <a href="/podcast" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> podcast </a>
-            <a href="/matic" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> gener-o-matic </a>
-            <a href="/sentence" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> the sentence </a>
-            <a href="/acerca" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> acerca </a>
+            <a href="/discover" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> discover </a>
+            <a href="/myqueue" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> myQueue </a>
+            <a href="/rand-o-matic" class="text-3xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> rand-o-matic </a>
         </div>
     </nav>
     </header>
