--- a/views/auth/user.hbs
+++ b/views/auth/user.hbs
@@ -1,7 +1,6 @@
 <div class="min-h-full">
   <main class="mt-10 pb-8">
     <div class="max-w-3xl mx-auto">
-      <h1 class="sr-only">Profile</h1>
       <!-- Main 3 column grid -->
       <div class="grid grid-cols-1 gap-4 items-start ">
         <!-- Left column -->
@@ -9,38 +8,32 @@
           <!-- Welcome panel -->
           <section aria-labelledby="profile-overview-title">
             <div class="rounded-lg bg-black overflow-hidden shadow">
-              <h2 class="sr-only" id="profile-overview-title">Profile Overview</h2>
               <div class="bg-black p-6">
                 <div class="sm:flex sm:items-center sm:justify-between">
                   <div class="sm:flex sm:space-x-5">
                     <div class="flex-shrink-0">
-                      <img class="mx-auto h-20 w-20 rounded-full" src="https://images.unsplash.com/photo-1550525811-e5869dd03032?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+                      <img class="mx-auto h-20 w-20 rounded-full" src="{{currentUser.avatar}}" alt="">
                     </div>
                     <div class="mt-4 text-center sm:mt-0 sm:pt-1 sm:text-left">
                       <p class="text-sm font-medium text-zgray-8">Welcome back,</p>
-                      <p class="text-xl font-bold text-zmagenta sm:text-2xl">Chelsea Hagon</p>
-                      <p class="text-sm font-medium text-gray-600">Human Resources Manager</p>
+                      <p class="text-xl font-bold text-zmagenta sm:text-2xl">{{currentUser.name}}</p>
+                      <p class="text-sm font-medium text-gray-600">@{{currentUser.username}} - Basic</p>
                     </div>
                   </div>
                   <div class="mt-5 flex justify-center sm:mt-0">
-                    <a href="#" class="flex justify-center items-center px-4 py-2 border border-zmagenta shadow-sm text-sm font-medium rounded-md text-white bg-zmagenta hover:bg-zorange"> sign out </a>
+                    <a href="/auth/signout" class="flex justify-center items-center px-4 py-2 border border-zmagenta shadow-sm text-sm font-medium rounded-md text-white bg-zmagenta hover:bg-zorange"> sign out </a>
                   </div>
                 </div>
               </div>
-              <div class="border-t border-gray-700 bg-black grid grid-cols-1 divide-y divide-gray-700 sm:grid-cols-3 sm:divide-y-0 sm:divide-x">
+              <div class="border-t border-gray-700 bg-black grid grid-cols-1 divide-y divide-gray-700 sm:grid-cols-2 sm:divide-y-0 sm:divide-x">
                 <div class="px-6 py-5 text-sm font-medium text-center">
-                  <span class="text-zorange">12</span>
-                  <span class="text-gray-600">Vacation days left</span>
+                  <span class="text-zorange">{{ currentUser.myqueues.length }}</span>
+                  <span class="text-gray-600">myQueue lists</span>
                 </div>
 
                 <div class="px-6 py-5 text-sm font-medium text-center">
-                  <span class="text-zorange">4</span>
-                  <span class="text-gray-600">Sick days left</span>
-                </div>
-
-                <div class="px-6 py-5 text-sm font-medium text-center">
-                  <span class="text-zorange">2</span>
-                  <span class="text-gray-600">Personal days left</span>
+                  <span class="text-zorange">{{ currentUser.myqueues.length }}</span>
+                  <span class="text-gray-600">songs stored</span>
                 </div>
               </div>
             </div>
