--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,9 +12,9 @@
     <div class="mt-1 flex rounded-md shadow-sm">
       <div class="relative flex items-stretch flex-grow focus-within:z-10">
         <input
-          type="email"
-          name="email"
-          id="email"
+          type="text"
+          name="query"
+          id="query"
           class="h-16 focus:ring-zmagenta focus:border-zmagenta bg-black text-zorange font-thin tracking-tighter block w-full rounded-none rounded-l-md pl-10 sm:text-xl border-gray-300 lg:text-3xl"
           placeholder="search artist, albums and songs"
         />
