--- a/views/myqueue.hbs
+++ b/views/myqueue.hbs
@@ -5,13 +5,43 @@
     <!-- This example requires Tailwind CSS v2.0+ -->
     <h1 class="text-left text-6xl mb-5 text-zorange font-thin tracking-tighter lg:text-7xl">lists</h1>
     <ul role="list" class="space-y-3">
-      {{#if newlist}}
-      <li class="bg-black shadow overflow-hidden rounded-md px-6 py-4">
-        <!-- Your content -->
+      {{#each alllists}}
+        <li class="bg-black shadow overflow-hidden rounded-md px-6 py-4 flex justify-between">
+          <a href="/myqueue/view/{{this._id}}" class="break-all bg-black text-zmagenta font-thin tracking-tighter hover:text-zorange sm:text-md lg:text-xl">
+            {{this.name}}
+          </a>
+          <span class="flex">
+            <a href="/myqueue/edit/{{this._id}}">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="white">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
+              </svg>
+            </a>
+            <form action="/myqueue/delete/{{this._id}}" method="POST">
+              <button class="bg-black -mb-3 ml-1">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="red">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+              </svg>
+              </button>
+            </form>
+          </span>
       </li>
-      <button type="button" class=" w-full text-center px-4 py-2 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-zmagenta hover:bg-zorange focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-zorange">
-        save list
-      </button>
+      {{/each}}
+      {{#if newlist}}
+      <form action="/myqueue/new" method="POST">
+      <li class="bg-black shadow overflow-hidden rounded-md px-6 py-4">
+        <input
+          type="text"
+          name="name"
+          id="name"
+          class="focus:ring-zmagenta focus:border-zmagenta bg-black text-zorange font-thin tracking-tighter block w-full rounded-md  sm:text-md border-gray-700 lg:text-lg"
+          placeholder="name"
+          required autofocus
+        />
+      </li>
+        <button type="submit" class="mt-3 w-full text-center px-4 py-2 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-zmagenta hover:bg-zorange focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-zorange">
+          save list
+        </button>
+      </form>
       {{else}}
       <a href="/myqueue/new" class="block w-full text-center px-4 py-2 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-zmagenta hover:bg-zorange focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-zorange">
         create new
@@ -25,27 +55,23 @@
     <!-- This example requires Tailwind CSS v2.0+ -->
     <h1 class="text-left text-6xl mb-5 text-zorange font-thin tracking-tighter lg:text-7xl">details</h1>
     <div class="bg-black shadow overflow-hidden rounded-md">
-      <ul role="list" class="divide-y divide-gray-700">
-        <li class="px-6 py-4">
-          <!-- Your content -->
-        </li>
-        <li class="px-6 py-4">
-          <!-- Your content -->
-        </li>
-        <li class="px-6 py-4">
-          <!-- Your content -->
-        </li>
-        <li class="px-6 py-4">
-          <!-- Your content -->
-        </li>
-        <li class="px-6 py-4">
-          <!-- Your content -->
-        </li>
-        
-        <!-- More items... -->
-      </ul>
-      
-      
+        <fieldset class="px-6 py-6">
+        {{#each editlist}}
+          {{#each songs}}
+            <div>
+              <div class="relative flex items-start py-4">
+                <div class="min-w-0 flex-1 text-sm">
+                  <label for="comments" class="font-medium text-zmagenta">{{name}}</label>
+                  <p id="comments-description" class="text-zorange">{{_id}}</p>
+                </div>
+                <div class="ml-3 flex items-center h-5">
+                  <input id="comments" aria-describedby="comments-description" name="comments" type="checkbox" class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded">
+                </div>
+              </div>
+            </div>
+            {{/each}}
+        {{/each}}
+        </fieldset>
     </div>
     <button type="button" class="w-36 mt-3 text-center px-4 py-2 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-zmagenta hover:bg-zorange focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-zorange">
           save queue
