--- a/views/music/artist.hbs
+++ b/views/music/artist.hbs
@@ -1,7 +1,11 @@
-<span class="text-8xl mb-5 text-zorange font-thin tracking-tighter lg:text-9xl">
+<span class="text-6xl mb-5 text-zorange font-thin tracking-tighter lg:text-7xl">
     {{artist.name}}</span>
-<span class="text-7xl mb-5 text-zgray-8 font-thin tracking-tighter lg:text-7xl">🌟{{artist.popularity}}% popularidad</span>
-<h1 class="text-6xl mb-5 text-zmagenta font-thin tracking-tighter lg:text-6xl">
+<span class="text-4xl mb-5 text-zgray-8 font-thin tracking-tighter lg:text-5xl">🌟{{artist.popularity}}% popularidad</span>
+<h1 class="text-3xl mb-5 text-zmagenta font-thin tracking-tighter lg:text-4xl">
     {{artist.followers.total}} seguidores</h1>
 
-<img src="{{artist.images.0.url}}" alt="">
+<img src="{{artist.images.1.url}}" alt="">
+
+<div>
+  <br><br><br><br><br><br><br>
+</div>
