--- a/views/synapsearch.hbs
+++ b/views/synapsearch.hbs
@@ -1,9 +1,5 @@
 <h1
-  class="text-8xl mb-2 text-zmagenta font-thin tracking-tighter lg:text-9xl"
->discover</h1>
-
-<h1
-  class="text-6xl mb-5 text-zorange font-thin tracking-tighter lg:text-7xl"
+  class="text-8xl mb-8 text-zmagenta font-thin tracking-tighter lg:text-9xl"
 >synapSearch</h1>
 
 <div class="mb-5">
@@ -49,27 +45,27 @@
 
 <h1
   class="text-6xl mb-5 text-zorange font-thin tracking-tighter lg:text-7xl"
->newbies in mx</h1>
+>results</h1>
 
 <div class="mb-5">
   <ul
     role="list"
     class="grid grid-cols-2 gap-x-4 gap-y-8 sm:grid-cols-3 sm:gap-x-6 lg:grid-cols-5 xl:gap-x-8"
   >
-    {{#each novedades}}
+    {{#each search}}
       <li class="relative">
         <div
           class="group block w-full aspect-w-10 aspect-h-7 bg-gray-100 focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-offset-gray-100 focus-within:ring-zorange overflow-hidden"
         >
-          <a href="/music/album/{{this.id}}"><img
-              src="{{this.images.0.url}}"
+          <a href="/music/album/{{this.album.id}}"><img
+              src="{{this.album.images.1.url}}"
               alt=""
               class="object-cover pointer-events-none group-hover:opacity-75"
             /></a>
         </div>
         <p
           class="mt-2 block text-md font-medium text-zmagenta truncate pointer-events-none"
-        >{{this.name}}</p>
+        >{{name}}</p>
         {{#each artists}}
           <a
             href="/music/artist/{{this.id}}"
