--- a/views/music/album.hbs
+++ b/views/music/album.hbs
@@ -1,6 +1,10 @@
-<span class="text-8xl mb-5 text-zorange font-thin tracking-tighter lg:text-9xl">
+<span class="text-6xl mb-5 text-zorange font-thin tracking-tighter lg:text-7xl">
     {{album.name}}</span>
-<h1 class="text-7xl mb-5 text-zgray-8 font-thin tracking-tighter lg:text-7xl">{{album.artists.0.name}}</h1>
+<h1 class="text-4xl mb-5 text-zgray-8 font-thin tracking-tighter lg:text-5xl">{{album.artists.0.name}}</h1>
 
 
-<img src="{{album.images.0.url}}" alt="">
+<img src="{{album.images.1.url}}" alt="">
+
+<div>
+  <br><br><br><br><br><br><br>
+</div>
