--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -53,7 +53,7 @@
                 <img src="https://img.icons8.com/windows/50/d9017a/brain.png"/>
                 <img src="https://img.icons8.com/windows/50/66676c/wireless-cloud-access.png"/>
                 <img src="https://img.icons8.com/windows/50/66676c/ssd.png"/>
-                <a href="" class="text-2xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> dispositivo cerebral conectado </a>
+                <a href="" class="text-2xl font-thin tracking-tighter text-zmagenta hover:text-zorange"> brain device connected</a>
             </div>
             <div class="mt-8 md:mt-0 ">
             <p class="text-center text-base text-zgray-10">&copy; 2022 jackscript.dev</p>
